force-app/main/default/objects/Activo__c/Activo__c.object-meta.xml
<CustomObject>
    <description>Entidad que modela los bienes asociados a un Expediente</description>
    <label>Activo</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Número de Activo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>