force-app/main/default/objects/Activo__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente al que pertenece el activo</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activos</relationshipLabel>
    <relationshipName>Activos</relationshipName>
    <type>Lookup</type>
</CustomField>