force-app/main/default/objects/Activo__c/fields/Entidad__c.field-meta.xml
<CustomField>
    <fullName>Entidad__c</fullName>
    <description>Entidad a la que está asociada la tarjeta</description>
    <label>Entidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>