force-app/main/default/objects/Activo__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <description>Fecha de la firma</description>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>