force-app/main/default/objects/Activo__c/fields/Notario__c.field-meta.xml
<CustomField>
    <fullName>Notario__c</fullName>
    <description>Notario</description>
    <label>Notario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>