force-app/main/default/objects/Activo__c/fields/NumeroProtocolo__c.field-meta.xml
<CustomField>
    <fullName>NumeroProtocolo__c</fullName>
    <description>Numero de protocolo de la hipoteca</description>
    <label>Nº de protocolo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>