force-app/main/default/objects/Activo__c/fields/NumeroTarjeta__c.field-meta.xml
<CustomField>
    <fullName>NumeroTarjeta__c</fullName>
    <description>Número de la tarjeta</description>
    <label>Nº tarjeta</label>
    <length>16</length>
    <type>Text</type>
</CustomField>