force-app/main/default/objects/Activo__c/recordTypes/Hipoteca.recordType-meta.xml
<RecordType>
    <fullName>Hipoteca</fullName>
    <active>true</active>
    <description>Hipoteca/Escritura</description>
    <label>Hipoteca</label>
</RecordType>