force-app/main/default/objects/Activo__c/recordTypes/Tarjeta.recordType-meta.xml
<RecordType>
    <fullName>Tarjeta</fullName>
    <active>true</active>
    <description>Tarjeta de crédito</description>
    <label>Tarjeta</label>
</RecordType>