force-app/main/default/objects/Activo__c/listViews/Todos_los_activos.listView-meta.xml
<ListView>
    <fullName>Todos_los_activos</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Entidad__c</columns>
    <columns>NumeroProtocolo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>NumeroTarjeta__c</columns>
    <columns>Notario__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los activos</label>
</ListView>